--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-    <button onclick="fbq('track', 'Purchase', {value: 0.00, currency: 'USD', content_ids: 'axt65pavnc'});">Clicker</button>
+    <button onclick="fbq('track', 'Purchase', {value: 0.00, currency: 'USD', content_ids: ['wufoji3h20'], product: 'wufoji3h20'});">Clicker</button>
   </body>
 </html>
